[package]
name = "dcft"
version = "0.1.1"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
clap = "2.33.0"
regex = "1"
